--- a/src/main/webapp/viewRest.xhtml
+++ b/src/main/webapp/viewRest.xhtml
@@ -26,6 +26,7 @@
                     <p:menuitem value="Programme" action="#{viewRestController.load()}">
                         <f:param name="service" value="bar"/>
                     </p:menuitem>
+                    <p:menuitem value="Programme" action="viewRest" url="/services/programme"/>
                     <p:menuitem value="Courses"   action="viewRest" url="/services/course"/>
                     <p:menuitem value="Documents" action="viewRest" url="/services/Library"/>
                     <p:menuitem value="Videos"    action="viewRest" url="/services/video"/>
