--- a/src/main/webapp/admin/editCourse.xhtml
+++ b/src/main/webapp/admin/editCourse.xhtml
@@ -205,17 +205,26 @@
                         <h:outputText value="Information:" />
                         <p:selectOneMenu value="#{courseController.information}" converter="#{articleConverter}" panelStyle="width:150px"  
                                  effect="fade" var="p" style="width:160px"  filter="true" filterMatchMode="startsWith">
-                            <f:selectItems value="#{courseController.articles}" var="article" itemLabel="#{article.title}" itemValue="#{article}"/>  
+                            <f:selectItems value="#{courseController.articles}" var="article" itemLabel="#{article.title}" itemValue="#{article}"/>
+                            <p:column>  
+                                #{p.title}
+                            </p:column>  
                         </p:selectOneMenu>
                         <h:outputText value="Help:" />
                         <p:selectOneMenu value="#{courseController.help}" converter="#{articleConverter}" panelStyle="width:150px"  
                                  effect="fade" var="p" style="width:160px"  filter="true" filterMatchMode="startsWith">
-                            <f:selectItems value="#{courseController.articles}" var="article" itemLabel="#{article.title}" itemValue="#{article}"/>  
+                            <f:selectItems value="#{courseController.articles}" var="article2" itemLabel="#{article2.title}" itemValue="#{article2}"/>
+                            <p:column>  
+                                #{p.title}
+                            </p:column>  
                         </p:selectOneMenu>
                         <h:outputText value="Dates:" />
                         <p:selectOneMenu value="#{courseController.dates}" converter="#{articleConverter}" panelStyle="width:150px"  
                                  effect="fade" var="p" style="width:160px"  filter="true" filterMatchMode="startsWith">
-                            <f:selectItems value="#{courseController.articles}" var="article" itemLabel="#{article.title}" itemValue="#{article}"/>  
+                            <f:selectItems value="#{courseController.articles}" var="article3" itemLabel="#{article3.title}" itemValue="#{article3}"/>  
+                            <p:column>  
+                                #{p.title}
+                            </p:column>  
                         </p:selectOneMenu>
                     </p:fieldset>
                 </div>
