Added Quiz to viewRest

--- a/src/main/webapp/viewRest.xhtml
+++ b/src/main/webapp/viewRest.xhtml
@@ -29,6 +29,7 @@
                     <p:menuitem value="Programme" action="viewRest" url="/services/programme"/>
                     <p:menuitem value="Courses"   action="viewRest" url="/services/course"/>
                     <p:menuitem value="Documents" action="viewRest" url="/services/Library"/>
+                    <p:menuitem value="Quiz" action="viewRest" url="/services/quiz"/>
                     <p:menuitem value="Videos"    action="viewRest" url="/services/video"/>
                     <p:menuitem value="News"      action="viewRest" url="/services/article/news/"/>
                     <p:menuitem value="Persons"   action="viewRest" url="/services/person"/>
