--- a/src/main/webapp/listQuizzes.xhtml
+++ b/src/main/webapp/listQuizzes.xhtml
@@ -30,8 +30,9 @@
                     <p:column headerText="Type">  
                         <h:outputText value="#{quizItem.quizType}"/>
                     </p:column>
-                    <p:column headerText="Delete">                          
-                        <p:commandButton id="confirmDeleteButton" value="Delete" action="#{quizController.removeQuiz(quizItem)}" actionListener="#{quizController.addInfo(1, quizItem)}" ajax="false"/>
+                    <p:column headerText="Delete">     
+                        <!--p:commandButton id="deleteQuiz" value="Delete quiz" actionListener="#{quizController.setupQuizForDeletion(quizItem)}" onclick="dlg1.show();" type="button" /-->
+                        <p:commandButton id="confirmDeleteButton" value="Delete" action="#{quizController.removeQuiz(quizItem)}" actionListener="#{quizController.addInfo(2)}" ajax="false"/>
                     </p:column>
                     <f:facet name="footer">
                         <p:commandButton value="Make testdata" action="#{quizController.makeTestData()}" actionListener="#{quizController.addInfo(1)}" update="quizTable"/>
@@ -46,7 +47,7 @@
         <p:dialog id="deleteQuizDialog" header="Delete quiz #{quizController.quizForDeletion.name} ?" widgetVar="dlg1">
             <h:outputText>Delete quiz?</h:outputText>
             <h:form id="deleteQuizDialogForm">
-                <p:commandButton id="confirmDeleteButton" value="Yes" action="#{quizController.deleteQuizForDeletion()}" actionListener="#{quizController.addInfo(1, quizItem)}" ajax="false"/>
+                <p:commandButton id="confirmDeleteButton" value="Yes" action="#{quizController.deleteQuizForDeletion()}" actionListener="#{quizController.addInfo(2)}" ajax="false"/>
             <p:commandButton id="cancelDeleteButton" value="No" onclick="dlg1.hide();"/>
             </h:form>
         </p:dialog>
