--- a/src/main/webapp/admin/editQuiz.xhtml
+++ b/src/main/webapp/admin/editQuiz.xhtml
@@ -10,7 +10,7 @@
     
     <ui:define name="right">
         <h:form id="docForm">                
-            <p:fieldset legend="New quiz">
+            <p:fieldset legend="New Quiz">
                 <p:panelGrid columns="2">
                 <p:panelGrid columns="2">  
                     <f:facet name="header">  
@@ -40,9 +40,9 @@
                             </f:facet>
                         </p:dataTable>
                     <f:facet name="footer">  
-                        <p:commandButton id="back" value="Back" ajax="false" action="/listQuizzes?faces-redirect=true" 
+                        <p:commandButton id="back" value="Back" ajax="false" action="listQuiz?faces-redirect=true" 
                                          actionListener="#{quizController.clearData()}"/>
-                        <p:commandButton id="submitButton" value="save" action="/listQuizzes?faces-redirect=true" 
+                        <p:commandButton id="submitButton" value="save" action="listQuiz?faces-redirect=true" 
                                          actionListener="#{quizController.editQuiz()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
                     </f:facet>
                 </p:panelGrid>
