Layout changes to the Quiz-section. Now shows the questions and their alternatives.

--- a/src/main/webapp/admin/editVideo.xhtml
+++ b/src/main/webapp/admin/editVideo.xhtml
@@ -9,7 +9,7 @@
     </ui:define>
     
     <ui:define name="right">
-        <h:form id="docForm">                
+        <h:form id="vidForm">                
             <p:fieldset legend="Video details">
                 <p:messages id="messages" showDetail="true" autoUpdate="true"/>
                 <p:panelGrid columns="3">  
