commit for help

--- a/src/main/webapp/listDocuments.xhtml
+++ b/src/main/webapp/listDocuments.xhtml
@@ -27,7 +27,7 @@
                     </p:column>
                 </p:dataTable>          
             </p:fieldset>
-            <p:commandButton value="Make testdata" action="#{libraryController.makeTestData()}" actionListener="#{libraryController.addInfo(1)}" update="documentTable"/>
+           <!-- <p:commandButton value="Make testdata" action="#{libraryController.makeTestData()}" actionListener="#{libraryController.addInfo(1)}" update="documentTable"/> -->
             <p:commandButton value="Home" action="index?faces-redirect=true"/>
             <p:commandButton value="New document" action="newDocument?faces-redirect=true"/>
         </h:form>
