--- a/src/main/webapp/viewDocumentation.xhtml
+++ b/src/main/webapp/viewDocumentation.xhtml
@@ -22,16 +22,16 @@
             </p:submenu>
             <p:submenu label="Management">
                 <p:menuitem value="Application frontpage" action="#{documentationController.navigate()}">
-                        <f:param name="page" value="documentation/addCourseDoc"/>
+                        <f:param name="page" value="documentation/frontpage"/>
                 </p:menuitem>
                 <p:menuitem value="Programmes" action="#{documentationController.navigate()}">
-                    <f:param name="page" value="/documentation/empty"/>
+                    <f:param name="page" value="/documentation/programmes"/>
                 </p:menuitem>
                 <p:menuitem value="Courses" action="#{documentationController.navigate()}">
-                    <f:param name="page" value="/documentation/empty"/>
+                    <f:param name="page" value="/documentation/courses"/>
                 </p:menuitem>
                 <p:menuitem value="Documents" action="#{documentationController.navigate()}">
-                    <f:param name="page" value="/documentation/empty"/>
+                    <f:param name="page" value="/documentation/documents"/>
                 </p:menuitem>
                 <p:menuitem value="Quizzes" action="#{documentationController.navigate()}">
                     <f:param name="page" value="/documentation/empty"/>
