--- a/src/main/webapp/admin/editQuestion.xhtml
+++ b/src/main/webapp/admin/editQuestion.xhtml
@@ -23,10 +23,10 @@
                         <h:inputText value="#{quizController.selectedQuestion.name}" />
                     </p:column>
                     <f:facet name="footer">  
-                                <p:commandButton id="submitButton" value="save" action="editQuiz?faces-redirect=true"
-                                                 actionListener="#{quizController.editQuiz()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
-                                                <p:commandButton id="back" value="Back" ajax="false" action="editQuiz?faces-redirect=true"/>
-                            </f:facet>
+                        <p:commandButton id="back" value="Back" ajax="false" action="editQuiz?faces-redirect=true"/>
+                        <p:commandButton id="submitButton" value="Save" action="editQuiz?faces-redirect=true"
+                                            actionListener="#{quizController.editQuiz()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
+                    </f:facet>
                     <p:column headerText="Alternatives">  
                         <p:dataTable id="altTable"
                                      value="#{quizController.selectedQuestion.alternatives}" 
