--- a/src/main/webapp/listPeople.xhtml
+++ b/src/main/webapp/listPeople.xhtml
@@ -25,10 +25,12 @@
                     <p:column headerText="Delete">  
                         <p:commandButton  id="deleteButton" value="Delete person" action="#{personController.deletePerson(Person)}" ajax="false"/>
                     </p:column>
+                    <f:facet name="footer">
+                    <p:commandButton value="Home" action="index?faces-redirect=true"/>
+                    <p:commandButton value="New person" action="newPerson?faces-redirect=true"/>
+                    </f:facet>
                 </p:dataTable>          
             </p:fieldset>
-            <p:commandButton value="Home" action="index?faces-redirect=true"/>
-            <p:commandButton value="New person" action="newPerson?faces-redirect=true"/>
         </h:form>
     </ui:define>
 </ui:composition>
